--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2",
     "vite-bundle-analyzer": "^0.7.0",
+    "vite-plugin-pwa": "^1.0.1",
     "vitest": "^1.6.1",
     "zod": "^3.25.71"
   }
