--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "analyze": "npx vite-bundle-analyzer"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
+    "@sendgrid/mail": "^8.1.5",
+    "@supabase/supabase-js": "^2.50.3",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.0.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
