--- a/.env.local.example
+++ b/.env.local.example
@@ -1,25 +1,22 @@
-# SendGrid Configuration for UniNest Email Verification
+# UniNest Environment Variables Template
 # Copy this file to .env.local and update with your actual values
+# NEVER commit .env files with real values to git!
 
-# SendGrid API Key (Get from SendGrid Dashboard > Settings > API Keys)
-# IMPORTANT: Keep this secret and never commit to version control
-VITE_SENDGRID_API_KEY=SG.your_sendgrid_api_key_here
+# Supabase Configuration
+VITE_SUPABASE_URL=https://your-project-id.supabase.co
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
-# Your verified sender email address (must be verified in SendGrid)
+# SendGrid Configuration for Email Verification
+SENDGRID_API_KEY=SG.your_sendgrid_api_key_here
 VITE_FROM_EMAIL=noreply@yourdomain.com
 
-# Test email address for development and testing
+# Optional: App Configuration
+VITE_APP_NAME=UniNest
+VITE_SUPPORT_EMAIL=support@yourdomain.com
 VITE_TEST_EMAIL=your-test-email@example.com
 
-# Optional: Custom app name for email templates
-VITE_APP_NAME=UniNest
+# Optional: Google Maps API (for address validation)
+VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
-# Optional: Support email for customer inquiries
-VITE_SUPPORT_EMAIL=support@yourdomain.com
-
-# Supabase Configuration (if using)
-VITE_SUPABASE_URL=your_supabase_project_url
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
-
-# Environment indicator
+# Environment
 NODE_ENV=development
