--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,22 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment and Secret Files - NEVER COMMIT THESE!
 .env
+.env.local
+.env.production
+.env.staging
+.env.development
+.env.test
+*.env
+.env.*
+
+# API Keys and Secrets
+secrets.json
+config/secrets.js
+config/keys.js
+
+# Supabase local files
+supabase/.temp
+supabase/.branches
