🧹 Clean up project for deployment
✨ What's been cleaned:
- Removed 13+ documentation files (keeping only README + SECURITY_SETUP)
- Removed test files (email-test.js, sendgrid-integration-test.js, etc.)
- Removed dev build artifacts (dev-dist/)
- Removed IDE config files (.bolt/)
- Removed all .env files with potential secrets
- Updated .gitignore with comprehensive patterns

🎯 Result: Clean, production-ready codebase
📁 Only essential files remain for deployment
🔒 No secrets or unnecessary files in repository

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,17 @@ config/keys.js
 # Supabase local files
 supabase/.temp
 supabase/.branches
+
+# Development and Testing Files
+*-test.js
+email-test.*
+test-*.js
+*.test.local.js
+
+# IDE and Tool Files
+.bolt/
+.cursor/
+.windsurf/
+
+# Build artifacts
+dev-dist/
