--- a/package.json
+++ b/package.json
@@ -8,11 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
-    "type-check": "tsc --noEmit",
-    "analyze": "npx vite-bundle-analyzer"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.5",
@@ -29,8 +25,6 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "@vitest/coverage-v8": "^1.6.1",
-    "@vitest/ui": "^1.6.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
@@ -41,9 +35,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2",
-    "vite-bundle-analyzer": "^0.7.0",
     "vite-plugin-pwa": "^1.0.1",
-    "vitest": "^1.6.1",
     "zod": "^3.25.71"
   }
 }
