updated the autofetch location logic and also enhanced profile section

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,22 @@
+# Production Environment Configuration Template
+# Copy this file to .env and fill in your actual values
+
 # Supabase Configuration
-VITE_SUPABASE_URL=your_supabase_project_url
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+VITE_SUPABASE_URL=your_supabase_project_url_here
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
-# Email Service Configuration (choose one)
-# Option 1: Resend
-RESEND_API_KEY=your_resend_api_key
+# Email Service Configuration
+SENDGRID_API_KEY=your_sendgrid_api_key_here
+VITE_FROM_EMAIL=your_email@yourdomain.com
 
-# Option 2: SendGrid (alternative)
-# SENDGRID_API_KEY=your_sendgrid_api_key
+# Google Maps API
+VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
 # Application Configuration
-VITE_APP_URL=http://localhost:5173
+VITE_APP_NAME=UniNest
+VITE_SUPPORT_EMAIL=support@yourdomain.com
+VITE_APP_URL=https://yourdomain.com
+
+# Environment Settings
+NODE_ENV=production
+VITE_ENVIRONMENT=production
