🧹 Major cleanup: Removed unwanted files and documentation
- Removed all markdown documentation files (*.md)
- Cleaned up duplicate environment files (.env.backup, .env.production, .env.real)
- Removed debug scripts (diagnose-profile-issue.js, fix-user-mismatch.js, etc.)
- Deleted standalone SQL files (keeping supabase/ migrations)
- Removed debug components (AddressDemo, AddressSystemTester, etc.)
- Deleted test directory and debug utilities
- Removed dev-dist build directory
- Updated .gitignore to prevent future unwanted files
- Kept only essential files for production deployment

--- a/.gitignore
+++ b/.gitignore
@@ -168,6 +168,20 @@ local-test.*
 *.bak
 *.backup
 
+# Debug and development files
+*debug*.js
+*diagnose*.js
+*fix-*.js
+dev-dist/
+
+# Documentation (keep only README.md)
+*.md
+!README.md
+
+# SQL scripts (except migrations)
+*.sql
+!supabase/migrations/*.sql
+
 # OS Generated Files
 .DS_Store
 .DS_Store?
