--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "deploy:netlify": "netlify deploy --prod"
   },
   "dependencies": {
-    "@sendgrid/mail": "^8.1.5",
     "@supabase/supabase-js": "^2.50.3",
+    "@types/nodemailer": "^6.4.17",
     "date-fns": "^3.6.0",
     "dotenv": "^17.0.1",
     "lucide-react": "^0.344.0",
+    "nodemailer": "^7.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0"
