--- a/vercel.json
+++ b/vercel.json
@@ -31,7 +31,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://maps.googleapis.com https://maps.gstatic.com https://*.google.com https://*.gstatic.com; connect-src 'self' https://maps.googleapis.com https://maps.gstatic.com https://*.google.com https://*.googleapis.com https://*.supabase.co wss://*.supabase.co https://api.sendgrid.com; img-src 'self' data: https: blob: https://*.google.com https://*.googleapis.com https://*.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://*.google.com; font-src 'self' https://fonts.gstatic.com https://*.google.com https://*.gstatic.com; frame-src 'none';"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://maps.googleapis.com https://maps.gstatic.com https://*.google.com https://*.gstatic.com; connect-src 'self' https://maps.googleapis.com https://maps.gstatic.com https://*.google.com https://*.googleapis.com https://*.supabase.co wss://*.supabase.co; img-src 'self' data: https: blob: https://*.google.com https://*.googleapis.com https://*.gstatic.com https://*.unsplash.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://*.google.com; font-src 'self' 'unsafe-inline' data: https://fonts.googleapis.com https://fonts.gstatic.com https://*.google.com https://*.gstatic.com; frame-src 'none';"
         },
         {
           "key": "Strict-Transport-Security",
