--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "nodemailer": "^7.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "resend": "^4.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
