--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 VITE_FROM_EMAIL=noreply@yourdomain.com
 RESEND_API_KEY=your_resend_api_key_here
 
+# Formspree Configuration (Alternative to Supabase for contact forms)
+VITE_FORMSPREE_ENDPOINT=https://formspree.io/f/your_form_id
+
 # App Configuration
 NODE_ENV=development
 VITE_APP_NAME=UniNest
